docs/source/releases/12.0-SNAPSHOT/index.rst
======================================
Software Summary (build 12.0-SNAPSHOT)
======================================
The software provided for the build 12.0-SNAPSHOT are listed hereafter
and organized by category:

- `PDS Tools`_

- `Discipline Node Services`_

- `Libraries`_

- `Other Core Services and Libraries`_

PDS Tools
=========

+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|tool                               |version            |last updated   |description                                                                                                                                              |l |manual|                                 |l |changelog|                                 |l |requirements|                           |l |download|                                 |l |license|                                 |l |feedback|                                 |
+===================================+===================+===============+=========================================================================================================================================================+===========================================+==============================================+===========================================+=============================================+============================================+=============================================+
|PDS API Client                     |None               |N/A            |PDS API Client                                                                                                                                           ||NASA-PDS/pds-api-client_manual|           ||NASA-PDS/pds-api-client_changelog|           |                                           ||NASA-PDS/pds-api-client_download|           ||NASA-PDS/pds-api-client_license|           ||NASA-PDS/pds-api-client_feedback|           |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PDS Deep Archive                   |v1.1.0-dev         |2021-05-03     |PDS Open Archival Information System (OAIS) utilities, including Submission Information Package (SIP) and Archive Information Package (AIP) generators   ||NASA-PDS/pds-deep-archive_manual|         ||NASA-PDS/pds-deep-archive_changelog|         ||NASA-PDS/pds-deep-archive_requirements|   ||NASA-PDS/pds-deep-archive_download|         ||NASA-PDS/pds-deep-archive_license|         ||NASA-PDS/pds-deep-archive_feedback|         |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|Validate                           |v2.1.0-SNAPSHOT    |2021-07-08     |Validates PDS4 product labels, data and PDS3 Volumes                                                                                                     ||NASA-PDS/validate_manual|                 ||NASA-PDS/validate_changelog|                 |                                           ||NASA-PDS/validate_download|                 ||NASA-PDS/validate_license|                 ||NASA-PDS/validate_feedback|                 |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PDS4 Information Model & LDDTool   |v13.1.0-SNAPSHOT   |2021-07-08     |The software tools and data necessary for generating the Information Model including PDS4 ontology, data, and information model.                         ||NASA-PDS/pds4-information-model_manual|   ||NASA-PDS/pds4-information-model_changelog|   |                                           ||NASA-PDS/pds4-information-model_download|   ||NASA-PDS/pds4-information-model_license|   ||NASA-PDS/pds4-information-model_feedback|   |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|Transform                          |None               |N/A            |Transforms PDS3 and PDS4 product labels and data into various formats.                                                                                   ||NASA-PDS/transform_manual|                ||NASA-PDS/transform_changelog|                |                                           ||NASA-PDS/transform_download|                ||NASA-PDS/transform_license|                ||NASA-PDS/transform_feedback|                |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|MILabel                            |v1.3.0-SNAPSHOT    |2021-06-22     |Metadata Injector for PDS Labels (MILabel), formerly known as Generate Tool                                                                              ||NASA-PDS/mi-label_manual|                 ||NASA-PDS/mi-label_changelog|                 |                                           ||NASA-PDS/mi-label_download|                 ||NASA-PDS/mi-label_license|                 ||NASA-PDS/mi-label_feedback|                 |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PLAID                              |None               |N/A            |APPS PDS Label Assistant for Interactive Design (PLAID). See an overview of the software on YouTube. https://www.youtube.com/watch?v=WCo8erW_rL8         ||NASA-PDS/PLAID_manual|                    ||NASA-PDS/PLAID_changelog|                    |                                           ||NASA-PDS/PLAID_download|                    ||NASA-PDS/PLAID_license|                    ||NASA-PDS/PLAID_feedback|                    |
+-----------------------------------+-------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------------------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+

Discipline Node Services
========================

+-------------------+-----------------+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------+----------------------------------------+-------------------+---------------------------------------+--------------------------------------+---------------------------------------+
|tool               |version          |last updated   |description                                                                                                                                          |l |manual|                           |l |changelog|                           |l |requirements|   |l |download|                           |l |license|                           |l |feedback|                           |
+===================+=================+===============+=====================================================================================================================================================+=====================================+========================================+===================+=======================================+======================================+=======================================+
|PDS Registry App   |1.0.0-SNAPSHOT   |2020-03-11     |Registry application enabling a PDS node to register all its data products for long term preservation and sharing with the rest of the PDS system.   ||NASA-PDS/pds-registry-app_manual|   ||NASA-PDS/pds-registry-app_changelog|   |                   ||NASA-PDS/pds-registry-app_download|   ||NASA-PDS/pds-registry-app_license|   ||NASA-PDS/pds-registry-app_feedback|   |
+-------------------+-----------------+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------+----------------------------------------+-------------------+---------------------------------------+--------------------------------------+---------------------------------------+

Libraries
=========

+---------------+------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------+------------------------------------+-------------------+-----------------------------------+----------------------------------+-----------------------------------+
|tool           |version           |last updated   |description                                                                                                                                                                      |l |manual|                       |l |changelog|                       |l |requirements|   |l |download|                       |l |license|                       |l |feedback|                       |
+===============+==================+===============+=================================================================================================================================================================================+=================================+====================================+===================+===================================+==================================+===================================+
|PDS4 JParser   |v2.1.0-SNAPSHOT   |2021-07-03     |Java Library providing APIs for parsing and exporting information on PDS4 products, including table and image objects to various formats including CSV, PNG, VICAR, FITs, etc.   ||NASA-PDS/pds4-jparser_manual|   ||NASA-PDS/pds4-jparser_changelog|   |                   ||NASA-PDS/pds4-jparser_download|   ||NASA-PDS/pds4-jparser_license|   ||NASA-PDS/pds4-jparser_feedback|   |
+---------------+------------------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------+------------------------------------+-------------------+-----------------------------------+----------------------------------+-----------------------------------+

Other Core Services and Libraries
=================================

+-------------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|tool                           |version           |last updated   |description                                                                                                                                                                                                                                                        |l |manual|                                   |l |changelog|                                   |l |requirements|   |l |download|                                   |l |license|                                   |l |feedback|                                   |
+===============================+==================+===============+===================================================================================================================================================================================================================================================================+=============================================+================================================+===================+===============================================+==============================================+===============================================+
|PDS DOI Service                |None              |N/A            |Service and tools for generating DOIs for PDS bundles, collections, and data sets                                                                                                                                                                                  ||NASA-PDS/pds-doi-service_manual|            ||NASA-PDS/pds-doi-service_changelog|            |                   ||NASA-PDS/pds-doi-service_download|            ||NASA-PDS/pds-doi-service_license|            ||NASA-PDS/pds-doi-service_feedback|            |
+-------------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|PDS DOI User Interface         |None              |N/A            |web UI for pds-doi-service                                                                                                                                                                                                                                         ||NASA-PDS/pds-doi-ui_manual|                 ||NASA-PDS/pds-doi-ui_changelog|                 |                   ||NASA-PDS/pds-doi-ui_download|                 ||NASA-PDS/pds-doi-ui_license|                 ||NASA-PDS/pds-doi-ui_feedback|                 |
+-------------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|Harvest                        |v3.5.0-SNAPSHOT   |2021-07-03     |Provides software provides functionality for capturing and indexing product metadata in PDS Registry. A sub-component of the PDS Registry App (https://github.com/NASA-PDS/pds-registry-app)                                                                       ||NASA-PDS/harvest_manual|                    ||NASA-PDS/harvest_changelog|                    |                   ||NASA-PDS/harvest_download|                    ||NASA-PDS/harvest_license|                    ||NASA-PDS/harvest_feedback|                    |
+-------------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|PDS Registry Manager Elastic   |v4.2.0-SNAPSHOT   |2021-07-03     |Tool for managing the Elastic Search back-end Registry Service for tracking, searching, auditing, locating, and maintaining artifacts within the Planetary Data System. See new PDS Registry App for more details (https://github.com/NASA-PDS/pds-registry-app)   ||NASA-PDS/pds-registry-mgr-elastic_manual|   ||NASA-PDS/pds-registry-mgr-elastic_changelog|   |                   ||NASA-PDS/pds-registry-mgr-elastic_download|   ||NASA-PDS/pds-registry-mgr-elastic_license|   ||NASA-PDS/pds-registry-mgr-elastic_feedback|   |
+-------------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+

.. |NASA-PDS/pds-doi-service_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-doi-service/
.. |NASA-PDS/pds-doi-service_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/pds-doi-service_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-doi-service_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-doi-service/releases/tag/None
.. |NASA-PDS/pds-doi-service_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-doi-service/main/LICENSE.txt
.. |NASA-PDS/pds-doi-service_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-doi-service/issues/new/choose
.. |NASA-PDS/pds-doi-ui_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://github.com/NASA-PDS/pds-doi-ui
.. |NASA-PDS/pds-doi-ui_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/pds-doi-ui_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-doi-ui_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-doi-ui/releases/tag/None
.. |NASA-PDS/pds-doi-ui_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-doi-ui/main/LICENSE.txt
.. |NASA-PDS/pds-doi-ui_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-doi-ui/issues/new/choose
.. |NASA-PDS/pds-registry-app_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-registry-app/
.. |NASA-PDS/pds-registry-app_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-registry-app/blob/main/CHANGELOG.md#100-snapshot-2020-03-11
.. |NASA-PDS/pds-registry-app_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-registry-app_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-registry-app/releases/tag/1.0.0-SNAPSHOT
.. |NASA-PDS/pds-registry-app_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-registry-app/main/LICENSE.txt
.. |NASA-PDS/pds-registry-app_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-registry-app/issues/new/choose
.. |NASA-PDS/pds-api-client_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-api-client/
.. |NASA-PDS/pds-api-client_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/pds-api-client_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-api-client_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-api-client/releases/tag/None
.. |NASA-PDS/pds-api-client_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-api-client/main/LICENSE.txt
.. |NASA-PDS/pds-api-client_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-api-client/issues/new/choose
.. |NASA-PDS/pds-deep-archive_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-deep-archive/
.. |NASA-PDS/pds-deep-archive_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/blob/main/CHANGELOG.md#v110-dev-2021-05-03
.. |NASA-PDS/pds-deep-archive_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/blob/main/docs/requirements/v1.1.0-dev/REQUIREMENTS.md
.. |NASA-PDS/pds-deep-archive_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/releases/tag/v1.1.0-dev
.. |NASA-PDS/pds-deep-archive_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-deep-archive/main/LICENSE.txt
.. |NASA-PDS/pds-deep-archive_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/issues/new/choose
.. |NASA-PDS/validate_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/validate/
.. |NASA-PDS/validate_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/validate/blob/main/CHANGELOG.md#v210-snapshot-2021-06-22
.. |NASA-PDS/validate_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/validate_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/validate/releases/tag/v2.1.0-SNAPSHOT
.. |NASA-PDS/validate_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/validate/main/LICENSE.txt
.. |NASA-PDS/validate_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/validate/issues/new/choose
.. |NASA-PDS/pds4-information-model_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds4-information-model/
.. |NASA-PDS/pds4-information-model_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds4-information-model/blob/main/CHANGELOG.md#v1310-snapshot-2021-07-08
.. |NASA-PDS/pds4-information-model_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds4-information-model_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds4-information-model/releases/tag/v13.1.0-SNAPSHOT
.. |NASA-PDS/pds4-information-model_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds4-information-model/main/LICENSE.txt
.. |NASA-PDS/pds4-information-model_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds4-information-model/issues/new/choose
.. |NASA-PDS/harvest_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/harvest/
.. |NASA-PDS/harvest_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/harvest/blob/main/CHANGELOG.md#v350-snapshot-2021-06-28
.. |NASA-PDS/harvest_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/harvest_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/harvest/releases/tag/v3.5.0-SNAPSHOT
.. |NASA-PDS/harvest_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/harvest/main/LICENSE.txt
.. |NASA-PDS/harvest_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/harvest/issues/new/choose
.. |NASA-PDS/pds-registry-mgr-elastic_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-registry-mgr-elastic/
.. |NASA-PDS/pds-registry-mgr-elastic_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/blob/main/CHANGELOG.md#v420-snapshot-2021-06-30
.. |NASA-PDS/pds-registry-mgr-elastic_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-registry-mgr-elastic_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/releases/tag/v4.2.0-SNAPSHOT
.. |NASA-PDS/pds-registry-mgr-elastic_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-registry-mgr-elastic/main/LICENSE.txt
.. |NASA-PDS/pds-registry-mgr-elastic_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/issues/new/choose
.. |NASA-PDS/transform_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/transform/
.. |NASA-PDS/transform_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/transform_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/transform_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/transform/releases/tag/None
.. |NASA-PDS/transform_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/transform/main/LICENSE.txt
.. |NASA-PDS/transform_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/transform/issues/new/choose
.. |NASA-PDS/pds4-jparser_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds4-jparser/
.. |NASA-PDS/pds4-jparser_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds4-jparser/blob/main/CHANGELOG.md#v210-snapshot-2021-06-30
.. |NASA-PDS/pds4-jparser_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds4-jparser_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds4-jparser/releases/tag/v2.1.0-SNAPSHOT
.. |NASA-PDS/pds4-jparser_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds4-jparser/main/LICENSE.txt
.. |NASA-PDS/pds4-jparser_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds4-jparser/issues/new/choose
.. |NASA-PDS/mi-label_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/mi-label/
.. |NASA-PDS/mi-label_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/mi-label/blob/main/CHANGELOG.md#v130-snapshot-2021-06-11
.. |NASA-PDS/mi-label_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/mi-label_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/mi-label/releases/tag/v1.3.0-SNAPSHOT
.. |NASA-PDS/mi-label_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/mi-label/main/LICENSE.txt
.. |NASA-PDS/mi-label_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/mi-label/issues/new/choose
.. |NASA-PDS/PLAID_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://github.com/NASA-PDS/PLAID
.. |NASA-PDS/PLAID_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/PLAID_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/PLAID_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/PLAID/releases/tag/None
.. |NASA-PDS/PLAID_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/PLAID/main/LICENSE.txt
.. |NASA-PDS/PLAID_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/PLAID/issues/new/choose
.. |manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual_text.png
   :alt: manual
.. |changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog_text.png
   :alt: changelog
.. |requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements_text.png
   :alt: requirements
.. |download| image:: https://nasa-pds.github.io/pdsen-corral/images/download_text.png
   :alt: download
.. |license| image:: https://nasa-pds.github.io/pdsen-corral/images/license_text.png
   :alt: license
.. |feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback_text.png
   :alt: feedback
