docs/source/releases/12.0/index.rst
=============================
Software Catalog (build 12.0)
=============================
The software provided for the build 12.0 are listed hereafter and
organized by category:

- `Standalone Tools and Libraries`_

- `Discipline Node Services`_

- `Libraries`_

- `Engineering Node Services`_

- `Other Tools and Libraries (dependencies)`_

Standalone Tools and Libraries
==============================
PDS tools for discipline nodes, data providers and users.

+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|tool                               |version   |last updated   |description                                                                                                                                              |l |manual|                                 |l |changelog|                                 |l |requirements|   |l |download|                                 |l |license|                                 |l |feedback|                                 |
+===================================+==========+===============+=========================================================================================================================================================+===========================================+==============================================+===================+=============================================+============================================+=============================================+
|PDS API Client                     |v0.7.1    |2021-10-01     |PDS API Client                                                                                                                                           ||NASA-PDS/pds-api-client_manual|           |                                              |                   ||NASA-PDS/pds-api-client_download|           ||NASA-PDS/pds-api-client_license|           ||NASA-PDS/pds-api-client_feedback|           |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PDS Deep Archive                   |v1.1.0    |2021-09-29     |PDS Open Archival Information System (OAIS) utilities, including Submission Information Package (SIP) and Archive Information Package (AIP) generators   ||NASA-PDS/pds-deep-archive_manual|         |                                              |                   ||NASA-PDS/pds-deep-archive_download|         ||NASA-PDS/pds-deep-archive_license|         ||NASA-PDS/pds-deep-archive_feedback|         |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|Validate                           |v2.1.0    |2021-10-05     |Validates PDS4 product labels, data and PDS3 Volumes                                                                                                     ||NASA-PDS/validate_manual|                 ||NASA-PDS/validate_changelog|                 |                   ||NASA-PDS/validate_download|                 ||NASA-PDS/validate_license|                 ||NASA-PDS/validate_feedback|                 |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PDS4 Information Model & LDDTool   |v13.1.0   |2021-10-05     |The software tools and data necessary for generating the Information Model including PDS4 ontology, data, and information model.                         ||NASA-PDS/pds4-information-model_manual|   ||NASA-PDS/pds4-information-model_changelog|   |                   ||NASA-PDS/pds4-information-model_download|   ||NASA-PDS/pds4-information-model_license|   ||NASA-PDS/pds4-information-model_feedback|   |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|Transform                          |v1.11.1   |2019-12-13     |Transforms PDS3 and PDS4 product labels and data into various formats.                                                                                   ||NASA-PDS/transform_manual|                |                                              |                   ||NASA-PDS/transform_download|                ||NASA-PDS/transform_license|                ||NASA-PDS/transform_feedback|                |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|MILabel                            |None      |N/A            |Metadata Injector for PDS Labels (MILabel), formerly known as Generate Tool                                                                              ||NASA-PDS/mi-label_manual|                 ||NASA-PDS/mi-label_changelog|                 |                   ||NASA-PDS/mi-label_download|                 ||NASA-PDS/mi-label_license|                 ||NASA-PDS/mi-label_feedback|                 |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+
|PLAID                              |None      |N/A            |APPS PDS Label Assistant for Interactive Design (PLAID). See an overview of the software on YouTube. https://www.youtube.com/watch?v=WCo8erW_rL8         ||NASA-PDS/PLAID_manual|                    ||NASA-PDS/PLAID_changelog|                    |                   ||NASA-PDS/PLAID_download|                    ||NASA-PDS/PLAID_license|                    ||NASA-PDS/PLAID_feedback|                    |
+-----------------------------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------+----------------------------------------------+-------------------+---------------------------------------------+--------------------------------------------+---------------------------------------------+

Discipline Node Services
========================
PDS servers that Discipline Node should deploy to publish their archive
at PDS level

+-------------------+----------+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------+----------------------------------------+-------------------+---------------------------------------+--------------------------------------+---------------------------------------+
|tool               |version   |last updated   |description                                                                                                                                          |l |manual|                           |l |changelog|                           |l |requirements|   |l |download|                           |l |license|                           |l |feedback|                           |
+===================+==========+===============+=====================================================================================================================================================+=====================================+========================================+===================+=======================================+======================================+=======================================+
|PDS Registry App   |v1.0.0    |2021-10-04     |Registry application enabling a PDS node to register all its data products for long term preservation and sharing with the rest of the PDS system.   ||NASA-PDS/pds-registry-app_manual|   ||NASA-PDS/pds-registry-app_changelog|   |                   ||NASA-PDS/pds-registry-app_download|   ||NASA-PDS/pds-registry-app_license|   ||NASA-PDS/pds-registry-app_feedback|   |
+-------------------+----------+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------+----------------------------------------+-------------------+---------------------------------------+--------------------------------------+---------------------------------------+

Libraries
=========
Libraries supported by PDS

+---------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------+----------------+-------------------+-----------------------------------+----------------------------------+-----------------------------------+
|tool           |version   |last updated   |description                                                                                                                                                                      |l |manual|                       |l |changelog|   |l |requirements|   |l |download|                       |l |license|                       |l |feedback|                       |
+===============+==========+===============+=================================================================================================================================================================================+=================================+================+===================+===================================+==================================+===================================+
|PDS4 JParser   |v2.1.0    |2021-10-03     |Java Library providing APIs for parsing and exporting information on PDS4 products, including table and image objects to various formats including CSV, PNG, VICAR, FITs, etc.   ||NASA-PDS/pds4-jparser_manual|   |                |                   ||NASA-PDS/pds4-jparser_download|   ||NASA-PDS/pds4-jparser_license|   ||NASA-PDS/pds4-jparser_feedback|   |
+---------------+----------+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------+----------------+-------------------+-----------------------------------+----------------------------------+-----------------------------------+

Engineering Node Services
=========================
PDS servers deployed by PDS Engineering Node at central level

+-------------------------------+----------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|tool                           |version   |last updated   |description                                                                                                                                                                                                                                                        |l |manual|                                   |l |changelog|                                   |l |requirements|   |l |download|                                   |l |license|                                   |l |feedback|                                   |
+===============================+==========+===============+===================================================================================================================================================================================================================================================================+=============================================+================================================+===================+===============================================+==============================================+===============================================+
|PDS DOI Service                |v2.0.0    |2021-09-27     |Service and tools for generating DOIs for PDS bundles, collections, and data sets                                                                                                                                                                                  ||NASA-PDS/pds-doi-service_manual|            ||NASA-PDS/pds-doi-service_changelog|            |                   ||NASA-PDS/pds-doi-service_download|            ||NASA-PDS/pds-doi-service_license|            ||NASA-PDS/pds-doi-service_feedback|            |
+-------------------------------+----------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|PDS DOI User Interface         |v0.4.0    |2021-09-30     |web UI for pds-doi-service                                                                                                                                                                                                                                         ||NASA-PDS/pds-doi-ui_manual|                 |                                                |                   ||NASA-PDS/pds-doi-ui_download|                 ||NASA-PDS/pds-doi-ui_license|                 ||NASA-PDS/pds-doi-ui_feedback|                 |
+-------------------------------+----------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|Harvest                        |v3.5.0    |2021-09-30     |Provides software provides functionality for capturing and indexing product metadata in PDS Registry. A sub-component of the PDS Registry App (https://github.com/NASA-PDS/pds-registry-app)                                                                       ||NASA-PDS/harvest_manual|                    ||NASA-PDS/harvest_changelog|                    |                   ||NASA-PDS/harvest_download|                    ||NASA-PDS/harvest_license|                    ||NASA-PDS/harvest_feedback|                    |
+-------------------------------+----------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+
|PDS Registry Manager Elastic   |v4.2.0    |2021-09-30     |Tool for managing the Elastic Search back-end Registry Service for tracking, searching, auditing, locating, and maintaining artifacts within the Planetary Data System. See new PDS Registry App for more details (https://github.com/NASA-PDS/pds-registry-app)   ||NASA-PDS/pds-registry-mgr-elastic_manual|   ||NASA-PDS/pds-registry-mgr-elastic_changelog|   |                   ||NASA-PDS/pds-registry-mgr-elastic_download|   ||NASA-PDS/pds-registry-mgr-elastic_license|   ||NASA-PDS/pds-registry-mgr-elastic_feedback|   |
+-------------------------------+----------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------+------------------------------------------------+-------------------+-----------------------------------------------+----------------------------------------------+-----------------------------------------------+

.. |NASA-PDS/pds-doi-service_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-doi-service/
.. |NASA-PDS/pds-doi-service_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-doi-service/blob/main/CHANGELOG.md#v200-2021-09-27
.. |NASA-PDS/pds-doi-service_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-doi-service_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-doi-service/releases/tag/v2.0.0
.. |NASA-PDS/pds-doi-service_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-doi-service/main/LICENSE.txt
.. |NASA-PDS/pds-doi-service_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-doi-service/issues/new/choose
.. |NASA-PDS/pds-doi-ui_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://github.com/NASA-PDS/pds-doi-ui
.. |NASA-PDS/pds-doi-ui_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: None
.. |NASA-PDS/pds-doi-ui_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-doi-ui_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-doi-ui/releases/tag/v0.4.0
.. |NASA-PDS/pds-doi-ui_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-doi-ui/main/LICENSE.txt
.. |NASA-PDS/pds-doi-ui_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-doi-ui/issues/new/choose
.. |NASA-PDS/pds-registry-app_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-registry-app/
.. |NASA-PDS/pds-registry-app_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-registry-app/blob/main/CHANGELOG.md#v100-2021-10-04
.. |NASA-PDS/pds-registry-app_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-registry-app_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-registry-app/releases/tag/v1.0.0
.. |NASA-PDS/pds-registry-app_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-registry-app/main/LICENSE.txt
.. |NASA-PDS/pds-registry-app_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-registry-app/issues/new/choose
.. |NASA-PDS/pds-api-client_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-api-client/
.. |NASA-PDS/pds-api-client_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: None
.. |NASA-PDS/pds-api-client_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-api-client_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-api-client/releases/tag/v0.7.1
.. |NASA-PDS/pds-api-client_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-api-client/main/LICENSE.txt
.. |NASA-PDS/pds-api-client_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-api-client/issues/new/choose
.. |NASA-PDS/pds-deep-archive_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-deep-archive/
.. |NASA-PDS/pds-deep-archive_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: None
.. |NASA-PDS/pds-deep-archive_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-deep-archive_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/releases/tag/v1.1.0
.. |NASA-PDS/pds-deep-archive_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-deep-archive/main/LICENSE.txt
.. |NASA-PDS/pds-deep-archive_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-deep-archive/issues/new/choose
.. |NASA-PDS/validate_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/validate/
.. |NASA-PDS/validate_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/validate/blob/main/CHANGELOG.md#v210-2021-10-05
.. |NASA-PDS/validate_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/validate_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/validate/releases/tag/v2.1.0
.. |NASA-PDS/validate_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/validate/main/LICENSE.txt
.. |NASA-PDS/validate_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/validate/issues/new/choose
.. |NASA-PDS/pds4-information-model_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds4-information-model/
.. |NASA-PDS/pds4-information-model_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds4-information-model/blob/main/CHANGELOG.md#v1310-2021-10-05
.. |NASA-PDS/pds4-information-model_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds4-information-model_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds4-information-model/releases/tag/v13.1.0
.. |NASA-PDS/pds4-information-model_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds4-information-model/main/LICENSE.txt
.. |NASA-PDS/pds4-information-model_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds4-information-model/issues/new/choose
.. |NASA-PDS/harvest_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/harvest/
.. |NASA-PDS/harvest_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/harvest/blob/main/CHANGELOG.md#v350-2021-09-30
.. |NASA-PDS/harvest_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/harvest_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/harvest/releases/tag/v3.5.0
.. |NASA-PDS/harvest_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/harvest/main/LICENSE.txt
.. |NASA-PDS/harvest_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/harvest/issues/new/choose
.. |NASA-PDS/pds-registry-mgr-elastic_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds-registry-mgr-elastic/
.. |NASA-PDS/pds-registry-mgr-elastic_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/blob/main/CHANGELOG.md#v420-2021-09-30
.. |NASA-PDS/pds-registry-mgr-elastic_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds-registry-mgr-elastic_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/releases/tag/v4.2.0
.. |NASA-PDS/pds-registry-mgr-elastic_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds-registry-mgr-elastic/main/LICENSE.txt
.. |NASA-PDS/pds-registry-mgr-elastic_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds-registry-mgr-elastic/issues/new/choose
.. |NASA-PDS/transform_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/transform/
.. |NASA-PDS/transform_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: None
.. |NASA-PDS/transform_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/transform_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/transform/releases/tag/v1.11.1
.. |NASA-PDS/transform_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/transform/main/LICENSE.txt
.. |NASA-PDS/transform_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/transform/issues/new/choose
.. |NASA-PDS/pds4-jparser_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/pds4-jparser/
.. |NASA-PDS/pds4-jparser_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: None
.. |NASA-PDS/pds4-jparser_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/pds4-jparser_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/pds4-jparser/releases/tag/v2.1.0
.. |NASA-PDS/pds4-jparser_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/pds4-jparser/main/LICENSE.txt
.. |NASA-PDS/pds4-jparser_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/pds4-jparser/issues/new/choose
.. |NASA-PDS/mi-label_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://NASA-PDS.github.io/mi-label/
.. |NASA-PDS/mi-label_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/mi-label_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/mi-label_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/mi-label/releases/tag/None
.. |NASA-PDS/mi-label_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/mi-label/main/LICENSE.txt
.. |NASA-PDS/mi-label_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/mi-label/issues/new/choose
.. |NASA-PDS/PLAID_manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual.png
   :target: https://github.com/NASA-PDS/PLAID
.. |NASA-PDS/PLAID_changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog.png
   :target: https://www.gnupg.org/gph/en/manual/r1943.html
.. |NASA-PDS/PLAID_requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements.png
   :target: None
.. |NASA-PDS/PLAID_download| image:: https://nasa-pds.github.io/pdsen-corral/images/download.png
   :target: https://github.com/NASA-PDS/PLAID/releases/tag/None
.. |NASA-PDS/PLAID_license| image:: https://nasa-pds.github.io/pdsen-corral/images/license.png
   :target: https://raw.githubusercontent.com/NASA-PDS/PLAID/main/LICENSE.txt
.. |NASA-PDS/PLAID_feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback.png
   :target: https://github.com/NASA-PDS/PLAID/issues/new/choose
.. |manual| image:: https://nasa-pds.github.io/pdsen-corral/images/manual_text.png
   :alt: manual
.. |changelog| image:: https://nasa-pds.github.io/pdsen-corral/images/changelog_text.png
   :alt: changelog
.. |requirements| image:: https://nasa-pds.github.io/pdsen-corral/images/requirements_text.png
   :alt: requirements
.. |download| image:: https://nasa-pds.github.io/pdsen-corral/images/download_text.png
   :alt: download
.. |license| image:: https://nasa-pds.github.io/pdsen-corral/images/license_text.png
   :alt: license
.. |feedback| image:: https://nasa-pds.github.io/pdsen-corral/images/feedback_text.png
   :alt: feedback
